--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
 	"dependencies": {
 		"dotenv": "^11.0.0",
 		"fastify": "^3.25.3",
-		"mysql2": "^2.3.3",
-		"node-cache": "^5.1.2"
+		"fastify-compress": "^4.0.1",
+		"lru-cache": "^6.0.0",
+		"mysql2": "^2.3.3"
 	},
 	"devDependencies": {
 		"nodemon": "^2.0.15"
